@@ -51,6 +51,40 @@
 				</td>
 			</tr>
 			<tr>
+				<td colspan=2>
+					<table class="actdate_data country_data">
+						<tr>
+							<th>Activity State</th>
+							<th>Activities</th>
+						</tr>
+						<tr>
+							<td>Total</td>
+							<td>{dash_quality_act_count_num}</td>
+						</tr>
+						<tr>
+							<td>Ended</td>
+							<td>{dash_list_actdate_act_ended}</td>
+						</tr>
+						<tr>
+							<td>Planned</td>
+							<td>{dash_list_actdate_act_planned}</td>
+						</tr>
+						<tr>
+							<td>Active</td>
+							<td>{dash_list_actdate_act_active}</td>
+						</tr>
+						<tr>
+							<td>Bad or missing dates so it can't be classified</td>
+							<td>{dash_list_actdate_act_missing}</td>
+						</tr>
+						<tr>
+							<td>Missing end date only</td>
+							<td>{dash_list_actdate_act_missing_end}</td>
+						</tr>
+					</table>
+				</td>
+			</tr>
+			<tr>
 				<td>
 					<div>{dash_quality_dataset_count}</div>
 					<div>IATI Datasets</div>
@@ -74,7 +108,7 @@
 					<div>Total number of reported budgets across all activities.</div>
 				</td>
 			</tr>
-		</table>
+		</table>	
 		<table class="pub dataset">
 			<tr>
 				<th>IATI Datasets <span class="note">Each dataset contains a number of activities. Links open external sites in new window.</span></th>
@@ -84,40 +118,6 @@
 		</table>
 		<span id="country_list"></span>
 		<table class="quality">
-			<tr>
-				<td>
-					<table class="actdate_data">
-						<tr>
-							<th>Activity State</th>
-							<th>Activities</th>
-						</tr>
-						<tr>
-							<td>Total</td>
-							<td>{dash_quality_act_count_num}</td>
-						</tr>
-						<tr>
-							<td>Ended</td>
-							<td>{dash_list_actdate_act_ended}</td>
-						</tr>
-						<tr>
-							<td>Planned</td>
-							<td>{dash_list_actdate_act_planned}</td>
-						</tr>
-						<tr>
-							<td>Active</td>
-							<td>{dash_list_actdate_act_active}</td>
-						</tr>
-						<tr>
-							<td>Missing or bad dates so it can't be classified.</td>
-							<td>{dash_list_actdate_act_missing}</td>
-						</tr>
-						<tr>
-							<td>Missing end date only</td>
-							<td>{dash_list_actdate_act_missing_end}</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
 			<tr>
 				<td>
 					<table class="country_data">
@@ -181,3 +181,7 @@ table.pub.dataset td.set	{padding:0;}
 table.pub.dataset td.set a	{display:block; padding:5px 0;}
 table.pub.dataset th		{border-bottom:1px solid #ccc; padding:5px 0;}
 table.pub.dataset th span.note	{display:inline-block; font-size:0.9em; padding-left:10px;}
+
+table.actdate_data.country_data td:first-child, table.actdate_data.country_data th:first-child	{text-align:right; width:60%;}
+table.actdate_data.country_data th:first-child	{padding:30px 30px 0 0;}
+table.actdate_data.country_data td:last-child, table.actdate_data.country_data th:last-child	{text-align:left;}
