@@ -2,6 +2,7 @@ Development Portal (2016-01-29 shi)
 ==============================
 Fixed all tables layout for better hover states
 Added border lines to Print Friendly tables
+Fixed Activity State section in Dash
 
 
 Development Portal (2016-01-28 shi)
